<resources>
    <string name="app_name">CalculadoraJCBG</string>

    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>

    <string name="btnSuma">+</string>
    <string name="btnResta">-</string>
    <string name="btnMultiplicacion">*</string>
    <string name="btnDivision">/</string>

    <string name="btnIgual">=</string>
    <string name="btnBorrar">C</string>
    <string name="btnSign">+/-</string>
    <string name="btnPercent">%</string>
    <string name="btnDecimal">.</string>

    <string name="btn_calculadora">Calculadora</string>
    <string name="btn_imc">IMC</string>
    <string name="text_inicio">Inicio</string>
    <string name="text_calculadora">Calculadora</string>
    <string name="text_imc">IMC</string>
    <string name="calculate_imc">Calcular IMC</string>
    <string name="weight_hint">Peso (kg)</string>
    <string name="height_hint">Estatura (cm)</string>
</resources>